--- a/Project/electricity-provider-api/ui_templates/change_data_overview.html
+++ b/Project/electricity-provider-api/ui_templates/change_data_overview.html
@@ -1,7 +1,7 @@
-{% extends "base.html" %}
+<!-- {% extends "base.html" %}
 
 {% block title %}Change your data - Overview{% endblock %}
-<!-- Display links to available options -->
+
 
 {% block body %}
     <h2>Choose an option:</h2>
@@ -11,4 +11,4 @@
         <li><a href="{% url 'change_billing_info' %}">Change Billing Information</a></li>
         <li><a href="{% url 'report_issue' %}">Report Issue</a></li>
     </ul>
-{% endblock %}
+{% endblock %} -->
